exports[`test should render 1 left theme display 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory" />
  <div
    className="terra-CompactTile-body">
    <div
      className="terra-CompactTile-rowContainer">
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--primarySize terra-CompactTile-content--primaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render 2 left theme displays 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory" />
  <div
    className="terra-CompactTile-body">
    <div
      className="terra-CompactTile-rowContainer">
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--primarySize terra-CompactTile-content--primaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--secondarySize terra-CompactTile-content--secondaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render 3 left theme displays 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory" />
  <div
    className="terra-CompactTile-body">
    <div
      className="terra-CompactTile-rowContainer">
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--primarySize terra-CompactTile-content--primaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--secondarySize terra-CompactTile-content--primaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--secondarySize terra-CompactTile-content--secondaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 3" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render a comment 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory" />
  <div
    className="terra-CompactTile-body">
    <Comment
      className=""
      isTruncated={false}
      text="comment"
      textStyle="attention" />
  </div>
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render a default component 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory" />
  <div
    className="terra-CompactTile-body" />
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render a left accessory 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory">
    <img
      alt="Graphic" />
  </div>
  <div
    className="terra-CompactTile-body" />
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render a right accessory 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory" />
  <div
    className="terra-CompactTile-body" />
  <div
    className="terra-CompactTile-accessory">
    <img
      alt="Graphic" />
  </div>
</div>
`;

exports[`test should render an accessory center aligned 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory">
    <img
      alt="Graphic" />
  </div>
  <div
    className="terra-CompactTile-body" />
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render an accessory top aligned 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignTop"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory">
    <img
      alt="Graphic" />
  </div>
  <div
    className="terra-CompactTile-body" />
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render one column 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory" />
  <div
    className="terra-CompactTile-body">
    <div
      className="terra-CompactTile-rowContainer">
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--primarySize terra-CompactTile-content--primaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--secondarySize terra-CompactTile-content--secondaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render truncated display 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory" />
  <div
    className="terra-CompactTile-body">
    <div
      className="terra-CompactTile-rowContainer">
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--primarySize terra-CompactTile-content--primaryColor">
          <Display
            className=""
            isTruncated={true}
            text="display1display1display1display1display1display1display1display1" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render two columns 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--twoColumns terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory" />
  <div
    className="terra-CompactTile-body">
    <div
      className="terra-CompactTile-rowContainer">
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--primarySize terra-CompactTile-content--primaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 1" />
        </div>
        <div
          className="terra-CompactTile-content terra-CompactTile-content--primarySize terra-CompactTile-content--primaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render with 1 display 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory" />
  <div
    className="terra-CompactTile-body">
    <div
      className="terra-CompactTile-rowContainer">
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--primarySize terra-CompactTile-content--primaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render with 2 displays 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory" />
  <div
    className="terra-CompactTile-body">
    <div
      className="terra-CompactTile-rowContainer">
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--primarySize terra-CompactTile-content--primaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--secondarySize terra-CompactTile-content--secondaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render with 3 displays 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory" />
  <div
    className="terra-CompactTile-body">
    <div
      className="terra-CompactTile-rowContainer">
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--primarySize terra-CompactTile-content--primaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--secondarySize terra-CompactTile-content--primaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--secondarySize terra-CompactTile-content--secondaryColor">
          <Display
            className=""
            isTruncated={false}
            text="display 3" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-CompactTile-accessory" />
</div>
`;

exports[`test should render with a display and graphic 1`] = `
<div
  className="terra-CompactTile terra-CompactTile--oneColumn terra-CompactTile-accessory--alignCenter"
  display={Array []}>
  <div
    className="terra-CompactTile-accessory" />
  <div
    className="terra-CompactTile-body">
    <div
      className="terra-CompactTile-rowContainer">
      <div
        className="terra-CompactTile-row">
        <div
          className="terra-CompactTile-content terra-CompactTile-content--primarySize terra-CompactTile-content--primaryColor">
          <Display
            className=""
            icon={
              <img
                alt="Graphic" />
            }
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
    </div>
  </div>
  <div
    className="terra-CompactTile-accessory" />
</div>
`;
